[gd_scene load_steps=7 format=3 uid="uid://3kf42t60aik7"]

[ext_resource type="Script" path="res://dzielenie/dzielenie.gd" id="1_pxtj2"]
[ext_resource type="Texture2D" uid="uid://dnoj6w7dvdl2i" path="res://placeholdery/poziom2.png" id="2_2koky"]
[ext_resource type="Texture2D" uid="uid://pl1n4cbocwqh" path="res://mnozenie/question.png" id="3_s3kkl"]
[ext_resource type="Texture2D" uid="uid://cgro0e1t8bxjs" path="res://dzielenie/dziel.png" id="4_caxyd"]
[ext_resource type="PackedScene" uid="uid://e4xec8t320oj" path="res://mnozenie/przegrana.tscn" id="5_ply53"]
[ext_resource type="PackedScene" uid="uid://cgen53sxd2e71" path="res://mnozenie/wygrana.tscn" id="6_c0fmw"]

[node name="Dzielenie" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pxtj2")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.164
anchor_bottom = 0.135
offset_left = -2.0
offset_top = 1.0
offset_right = 964.072
offset_bottom = 565.52
texture = ExtResource("2_2koky")
expand_mode = 1

[node name="1instance" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 149.0
offset_top = 109.0
offset_right = 367.0
offset_bottom = 293.0
expand_mode = 1

[node name="2instance" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 470.0
offset_top = 112.0
offset_right = 682.0
offset_bottom = 294.0
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = -5.0
offset_right = 1144.0
offset_bottom = 371.0
texture = ExtResource("3_s3kkl")

[node name="TextureRect3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 174.0
offset_top = 29.0
offset_right = 841.0
offset_bottom = 404.0
texture = ExtResource("4_caxyd")
expand_mode = 1

[node name="a" type="Button" parent="."]
layout_mode = 0
offset_left = 777.0
offset_top = 481.0
offset_right = 875.0
offset_bottom = 538.0

[node name="b" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.085
anchor_bottom = 0.132
offset_left = 618.0
offset_top = 479.0
offset_right = 623.08
offset_bottom = 455.464

[node name="c" type="Button" parent="."]
layout_mode = 0
offset_left = 181.0
offset_top = 478.0
offset_right = 280.0
offset_bottom = 536.0

[node name="d" type="Button" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 480.0
offset_right = 498.0
offset_bottom = 538.0

[node name="wynik" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -203.0
offset_top = 28.0
offset_right = -122.0
offset_bottom = 116.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="liczba1" type="Label" parent="."]
layout_mode = 0
offset_left = 130.0
offset_top = 141.0
offset_right = 343.0
offset_bottom = 264.0

[node name="liczba2" type="Label" parent="."]
layout_mode = 0
offset_left = 546.0
offset_top = 142.0
offset_right = 713.0
offset_bottom = 266.0

[node name="szansy" type="Label" parent="."]
layout_mode = 0
offset_left = 853.0
offset_top = 13.0
offset_right = 1101.0
offset_bottom = 168.0

[node name="przeg" type="CanvasLayer" parent="."]

[node name="Przegrana" parent="przeg" instance=ExtResource("5_ply53")]

[node name="wygr" type="CanvasLayer" parent="."]

[node name="Wygrana" parent="wygr" instance=ExtResource("6_c0fmw")]

[connection signal="pressed" from="a" to="." method="_on_a_pressed"]
[connection signal="pressed" from="b" to="." method="_on_b_pressed"]
[connection signal="pressed" from="c" to="." method="_on_c_pressed"]
[connection signal="pressed" from="d" to="." method="_on_d_pressed"]
